# CH32V307_Template

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  build.bat  openocd.cfg
Debug/: debug.c
User/: ch32v30x_conf.h  ch32v30x_it.c  ch32v30x_it.h  main.c  system_ch32v30x.c
User/Lib/: gpio_utils.h  tick.c  tick.h
cmake/: toolchain.cmake
doc/: AI_INSTRUCTION.md  CH32V307.svd
